...
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarButtonTestID: 'tab-home',
          tabBarIcon: ({ color }) => <TabIcon name="♫" color={color} />,
        }}
      />
      <Tabs.Screen
        name="feed"
        options={{
...
        }}
      />
      <Tabs.Screen
        name="organizer"
        options={{
          title: 'Organize',
          tabBarButtonTestID: 'tab-organize',
          tabBarIcon: ({ color }) => <TabIcon name="☰" color={color} />,
        }}
      />
      <Tabs.Screen
        name="history"
        options={{
...
